--- a/talks_workshops/2022-08-05-creating-your-personal-website-using-quarto/index.qmd
+++ b/talks_workshops/2022-08-05-creating-your-personal-website-using-quarto/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Creating your personal website using Quarto"
 description: |
-  step-by-step instructions for building, deploying, and customizing a Quarto website
+  step-by-step instructions for building & deploying a Quarto website
 author:
   - name: Samantha Csik
     orcid: 0000-0002-5300-3075 
