added target="_blank" to all buttons and navbar links

--- a/index.qmd
+++ b/index.qmd
@@ -10,12 +10,15 @@ about:
     - icon: linkedin
       text: LinkedIn
       href: https://www.linkedin.com/in/samanthacsik/
+      target: _blank
     - icon: twitter
       text: Twitter
       href: https://twitter.com/SamanthaCsik
+      target: _blank
     - icon: github
       text: GitHub
       href: https://github.com/samanthacsik
+      target: _blank
     - icon: envelope
       text: Email
       href: mailto:scsik@ucsb.edu
