--- a/talks_workshops/2023-03-16-ggplot2/index.qmd
+++ b/talks_workshops/2023-03-16-ggplot2/index.qmd
@@ -30,7 +30,7 @@ Art by [Allison Horst](https://allisonhorst.com/)
 <br>
 
 ::: {.center-text}
-[{{< fa file-alt title="A file with lines of text" >}} materials](https://ucsb-meds.github.io/ggplot2-workflow/){.btn role="button"} [{{< fa brands github title="Octocat, the GitHub logo" >}} source code](https://github.com/UCSB-MEDS/ggplot2-workflow/tree/main){.btn role="button"}
+[{{< fa file-alt title="A file with lines of text" >}} materials](https://ucsb-meds.github.io/ggplot2-workflow/){.btn role="button" target="_blank"} [{{< fa brands github title="Octocat, the GitHub logo" >}} source code](https://github.com/UCSB-MEDS/ggplot2-workflow/tree/main){.btn role="button" target="_blank"}
 :::
 
 # Abstract 
