--- a/projects/2022-11-23-strava-dashboard/index.qmd
+++ b/projects/2022-11-23-strava-dashboard/index.qmd
@@ -8,7 +8,7 @@ image: strava-logo-white-bg.png
 draft: false
 ---
 
-[{{< fa brands r-project >}} shiny dashboard](https://samanthacsik.shinyapps.io/strava_dashboard/){.btn} [{{< fa brands github >}} source code](https://github.com/samanthacsik/strava-dashboard){.btn}
+[{{< fa brands r-project >}} shiny dashboard](https://samanthacsik.shinyapps.io/strava_dashboard/){.btn target=_blank} [{{< fa brands github >}} source code](https://github.com/samanthacsik/strava-dashboard){.btn target=_blank}
 
 <br>
 
