--- a/talks_workshops/2021-11-15-ide-tips-tricks/index.qmd
+++ b/talks_workshops/2021-11-15-ide-tips-tricks/index.qmd
@@ -9,17 +9,22 @@ author:
     affiliation: Master of Environmental Data Science Program @ The Bren School (UCSB) & The National Center for Ecological Analysis and Synthesis
     affiliation-url: https://ucsb-meds.github.io/
 date: 2021-11-15
+date-modified: last-modified
 slug: csik2021Rtipstricks
 categories: [MEDS, R]
 image: lightbulb.gif
 ---
+
+It became clear after two cohorts of students that delivering tons of shortcut all at once (in the form of an hour-long workshop; see slide deck, below) was not particularly helpful or effective (learners aren't given sufficient time to practice and build muscle memory). We're testing out a different approach, beginning summer 2023, and presenting a few "Keyboard Shortcuts of the Week" throughout the 6-week long MEDS summer session. You can read more about the format and shortcuts list on [this wiki](https://github.com/UCSB-MEDS/IDE-tips-and-tricks/wiki/Updated-Approach-for-Delivering-IDE-Tips-&-Tricks---Keyboard-Shortcuts).
+
+<br>
 
 <center><iframe src="https://ucsb-meds.github.io/IDE-tips-and-tricks/#/title-slide" title="IDE Tips & Tricks" width=750px, height=550px></iframe></center>
 
 <br>
 
 ::: {.center-text}
-[{{< fa tv title="A television screen" >}} slides](https://ucsb-meds.github.io/IDE-tips-and-tricks/#/title-slide){.btn role="button"} [{{< fa brands github title="Octocat, the GitHub logo" >}} source code](https://github.com/UCSB-MEDS/IDE-tips-and-tricks){.btn role="button"}
+[{{< fa tv title="A television screen" >}} slides](https://ucsb-meds.github.io/IDE-tips-and-tricks/#/title-slide){.btn role="button" target=_blank} [{{< fa brands github title="Octocat, the GitHub logo" >}} source code](https://github.com/UCSB-MEDS/IDE-tips-and-tricks){.btn role="button" target=_blank}
 :::
 
 # Abstract
@@ -28,5 +33,5 @@ As environmental data scientists, we spend a lot of time in RStudio. Taking some
 
 # Audience
 
-This talk was originally developed for the [Master of Environmental Data Science (MEDS) program](https://ucsb-meds.github.io/), administered by the [Bren School of Environmental Science & Management](https://bren.ucsb.edu/masters-programs/master-environmental-data-science) in partnership with the [National Center for Ecological Analysis and Synthesis](https://www.nceas.ucsb.edu/). *Last revision: October 3, 2022*
+These materials were originally developed for the [Master of Environmental Data Science (MEDS) program](https://ucsb-meds.github.io/), administered by the [Bren School of Environmental Science & Management](https://bren.ucsb.edu/masters-programs/master-environmental-data-science) in partnership with the [National Center for Ecological Analysis and Synthesis](https://www.nceas.ucsb.edu/).
 
