added courses tab + EDS 240 & 430; updated map

--- a/projects.qmd
+++ b/projects.qmd
@@ -1,6 +1,6 @@
 ---
 title: "projects"
-subtitle: "some of my more notable side projects, courses, and freelancing work" 
+subtitle: "some of my more notable side projects and freelancing work" 
 listing:
   contents: projects
   feed: true
