--- a/courses.qmd
+++ b/courses.qmd
@@ -10,7 +10,7 @@ listing:
   grid-item-align: left
   max-description-length: 175
   date-format: medium
-  # categories: numbered
+  categories: numbered
   sort-ui: false
   filter-ui: false
 page-layout: full
