--- a/about.qmd
+++ b/about.qmd
@@ -21,7 +21,7 @@ Teaching MEDS students how to build their own personal websites using Quarto! Th
 :::
 :::
 
-I'm afforded a lot of flexibility in how I teach and what I teach. My focus is on developing and delivering workshop-style classes that supplement the [MEDS core curriculum](https://ucsb-meds.github.io/courses.html). I teach primarily via live-coding (where my computer is hooked up to a screen for workshop participants to see and hear me talk through code in real time as they follow along on their own computers) -- this teaching style was invaluable in my own development as a data scientist, and I really believe that, when done well, live-coding can be a game-changing experience for early-career coders and data scientists. I am always looking for new ways to make my teaching style and materials more approachable and inclusive for all learners -- I try to build my materials to be stand-alone resources both for participants to refer back to and also for those learning on their own time. Feel free to check out / reuse / recycle any of my [workshop](talks_workshops.qmd) and [course](courses.qmd) materials.
+I'm afforded a lot of flexibility in how I teach and what I teach. My focus is on developing and delivering workshop-style classes that supplement the [MEDS core curriculum](https://ucsb-meds.github.io/courses.html), though I'm now (as of Winter 2024) also teaching one of those core courses, [EDS 240: Data Visualization & Communication](https://samanthacsik.github.io/EDS-240-data-viz/) (it's been super rewarding!). I teach primarily via live-coding (where my computer is hooked up to a screen for workshop participants to see and hear me talk through code in real time as they follow along on their own computers) -- this teaching style was invaluable in my own development as a data scientist, and I really believe that, when done well, live-coding can be a game-changing experience for early-career coders and data scientists. I am always looking for new ways to make my teaching style and materials more approachable and inclusive for all learners -- I try to build my materials to be stand-alone resources both for participants to refer back to and also for those learning on their own time. Feel free to check out / reuse / recycle any of my [workshop](talks_workshops.qmd) and [course](courses.qmd) materials.
 
 ## {{< fa hiking title="A person with a backpack and trekking pole" >}} the hobby 
 
