--- a/about.qmd
+++ b/about.qmd
@@ -1,6 +1,6 @@
 ---
 title: "about"
-subtitle: "~ a bit more about me both inside and outside of my job ~"
+subtitle: "a bit more about me, both inside and outside of my job"
 title-block-banner: true
 ---
 
@@ -8,7 +8,7 @@ title-block-banner: true
 
 I'm the Data Training Coordinator at the [National Center for Ecological Analysis & Synthesis](https://www.nceas.ucsb.edu/) (NCEAS) located at UC Santa Barbara, where I'm working to develop and teach data science training curricula for the [Master of Environmental Data Science](https://bren.ucsb.edu/masters-programs/master-environmental-data-science) (MEDS) program and other data science initiatives across NCEAS and UCSB. I am also a co-organizer of [R-Ladies Santa Barbara](https://www.meetup.com/rladies-santa-barbara/), a local data science group which works to promote gender diversity in the R community.
 
-My background is in marine ecology / ecophysiology -- I was afforded opportunities to study coral disease in Panama and the Florida Keys as an undergrad, then temperature effects on spiny lobster metabolism and foraging behavior in Santa Barbara for my Masters degree. Since the beginning of my time in STEM, I was totally terrified of all things data / coding / data science, but thanks to a super supportive community and some really rad colleagues / instructors, I found my new path in data science education and I absolutely *love* it.
+My background is in marine ecology / ecophysiology -- I had opportunities to study coral disease in Panama and the Florida Keys as an undergrad, then temperature effects on spiny lobster metabolism and foraging behavior in Santa Barbara for my Masters degree. Since the beginning of my time in STEM, I was totally terrified of all things data / coding / data science, but thanks to a super supportive community and some really rad colleagues / instructors, I found my new path in data science education and I absolutely *love* it.
 
 :::{.column-margin}
 ```{r}
@@ -16,7 +16,7 @@ My background is in marine ecology / ecophysiology -- I was afforded opportuniti
 #| fig-alt: "A classroom full of students face forward towards the instructor, who stands at a podium at the front of the room. Students have their laptops open on their desks. Three large TV screens are illuminated at the front of the classroom, displaying workshop materials."
 knitr::include_graphics("images/teaching.jpeg")
 ```
-::: {.extra-small-text .dark-gray-text .topbr}
+::: {.center-text .extra-small-text .dark-gray-text .topbr}
 Teaching MEDS students how to build their own personal websites using Quarto! This was especially fun for me, since Quarto was still such a new tool when I first gave this workshop -- it meant a lot of discovery and learning on-the-fly alongside our students.
 :::
 :::
@@ -33,7 +33,7 @@ I feel very fortunate to be doing so many of things that I love *a lot* right no
 #| fig-alt: "A smiling woman with braiding pigtails, a blue bandana tied around her neck, and a blue hiking backback takes a selfie with a brown dog. The dog is looking towards the camera with it's tongue out. There are mountains in the background."
 knitr::include_graphics("images/tallie.jpeg")
 ```
-::: {.extra-small-text .dark-gray-text .topbr}
+::: {.center-text .extra-small-text .dark-gray-text .topbr}
 My right-hand hiking gal, Tallie (aka Bean aka TunaB aka SweetCheeks).
 :::
 :::
@@ -60,7 +60,7 @@ I'm a proud Csik (pronounced "chick" -- Hungarian, for the curious), though I sp
 #| fig-alt: "The back of a handmade card made of construction paper. A yellow chick with an orange beak holds an 'S'-shaped worm in its beak. It sits on top of the text, 'The Csik Press'. Below this, the year '2010' is written in pen."
 knitr::include_graphics("images/the_csik_press.jpeg")
 ```
-::: {.extra-small-text .dark-gray-text .topbr}
+::: {.center-text .extra-small-text .dark-gray-text .topbr}
 The back of a handmade birthday card by yours truly (aka 'The Csik Press'). Thanks, Mom, for sending me pics of these decade+ old treasures whenever you come across them. Artist: Sam Csik. Medium: construction paper, Elmer's glue. Date: 2010 (apparently).
 :::
 :::
