--- a/posts/2024-03-31-data-viz-course/index.qmd
+++ b/posts/2024-03-31-data-viz-course/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Building (and teaching) a graduate-level data science course"
 description: |
-  a brain-dump of the many thoughts, processes, and considerations that have been at the center of my attention for the past eight(!) months
+  a brain-dump of the many thoughts, processes, and considerations that have been my focus for the past seven(!) months
 author:
   - name: Samantha Csik
     url: https://samanthacsik.github.io/
@@ -11,16 +11,100 @@ citation:
   url: https://samanthacsik.github.io/posts/2024-03-31-data-viz-course/
 categories: [MEDS, R, data-visualization]
 image: media/horst-eco-r4ds.png
-draft: false
+draft: true
 ---
 
-Where do you even start with building a syllabus?
+::: {.center-text}
+*I had initially intended for this to be a short, high-level reflection of what it was like to build and teach a new (to me) grad-level course. I decided part-way through, however, that this might be the best place to outline some of the more nitty-gritty details (about how academia operates, planning timelines, classroom management, curriculum, etc.), and as a result, it's turned into a short novel. I hope other new educators might find some of these details helpful!* 
+
+*I'm eternally grateful to the many colleagues, educators, and online strangers who have taken the time to share their own experiences, advice, and materials -- the open data science community is a real gem, and I'm so lucky to be a part of it.*
+:::
+
+<br>
+
+<div class="quote-text-bg">**TL;DR** some text here</div>
+
+<br>
+
+It felt like running a marathon at sprint speed at times (okay, almost the whole time), but I just finished teaching my first(!!) graduate-level course for the [Master of Environmental Data Science](https://bren.ucsb.edu/masters-programs/master-environmental-data-science/academics-meds) (MEDS) program -- I'm so exhausted and so proud and I can't wait to (hopefully) do it again next year. While I've witnessed so many incredible colleagues successfully teach really rad courses in this program since it first began in 2021, I still felt like I was stepping into a large unknown. Now that I'm through the other side, I wanted to reflect on my process, experience, and considerations. I've learned so much (*seriously sooooo much*) from other educators who have openly shared their materials and ideas online, and writing this here is my small way of trying to give back to that community. I'll try to be as transparent as possible about all steps of this process.
+
+## First, some context
+
+The MEDS program is an 11-month professional masters program, administered by the [Bren School of Environmental Science & Management](https://bren.ucsb.edu/masters-programs/master-environmental-data-science) in partnership with the [National Center for Ecological Analysis and Synthesis](https://www.nceas.ucsb.edu/) (NCEAS). The program is designed to provide data and technical skills to students with prior experience in the environmental sciences, preparing them for a workforce where data and programming literacy is increasingly becoming the norm.
+
+::: {.grid}
+
+::: {.g-col-12 .g-col-md-4}
+```{r}
+#| eval: true
+#| echo: false
+#| fig-align: "center"
+#| out-width: "70%"
+#| fig-alt: "tbd"
+knitr::include_graphics("media/bren-hex.png")
+```
+:::
+
+::: {.g-col-12 .g-col-md-4}
+```{r}
+#| eval: true
+#| echo: false
+#| fig-align: "center"
+#| out-width: "70%"
+#| fig-alt: "tbd"
+knitr::include_graphics("media/MEDS-hex.png")
+```
+:::
+
+::: {.g-col-12 .g-col-md-4}
+```{r}
+#| eval: true
+#| echo: false
+#| fig-align: "center"
+#| out-width: "70%"
+#| fig-alt: "tbd"
+knitr::include_graphics("media/NCEAS-hex.png")
+```
+:::
+
+:::
+
+[EDS 240: Data Visualization and Communication](https://bren.ucsb.edu/courses/eds-240) is MEDS a "core" course, meaning students need to enroll in and pass the course to earn their degree. While I'm not new to teaching -- in fact, my role within the MEDS program is primarily centered around developing and teaching short (*typically* 1-3 hours) workshop-style courses that supplement the core curricula -- taking on a 4-unit core course was certainly new territory. When the opportunity to teach EDS 240 opened up, I was pretty excited and also *really* nervous. Sure, I was familiar with the idea of data visualization -- I've created my fair share of ggplots, discussed / admired / critiqued plenty of viz, and I've made good use of some of the most popular online data viz resources -- but I certainly would not consider myself an "expert" in this field or even in using `{ggplot2}` + extension packages in R. 
+
+My only real guidelines were to beef up the technical skills / lessons -- the prior version of this course was highly conceptual and didn't involve much programming. Other than that, I was free to do what I wanted. And so, I set off on building my very first grad-level data science course. 
+
+## A general timeline (from start to finish)
+
+**I spent about 7 months sincerely preparing for and teaching EDS 240 (not including the application and interview process).** I recognize that's a loonnggg runway and that not every instructor is afforded the time or has the capacity to do the same (particularly lecturers). As an existing employee of the MEDS program whose responsibilities are largely centered around teaching, I was allowed the time and space to think deeply about this course. I'm a super nervous planner when it comes to anything work / teaching-related (hello, imposter syndrome!), so I personally needed this prep time to feel like I had things (sort of) under control. Here's how that timeline roughly shook out:
+
+***Note:** I'm also including information about the application process here -- it was totally foreign to me, and while this is specific to UCSB / Bren, I imagine other institutions may follow a similar (somewhat lengthy) process.*
+
+- **April 2023:** Submitted my application for [Teaching Positions, Bren School of Environmental Science & Management](https://recruit.ap.ucsb.edu/JPF02448) -- this is a general call for [Unit 18 Faculty](https://ap.ucsb.edu/policies.and.procedures/red.binder/sections/%5B2_01%5D%20Unit%2018%20Faculty%20and%20Supervisor%20of%20Teacher%20Education%20Series.pdf) (also referred to as Lecturers). Applications require a cover letter, CV, Teaching Statement, and three references. You are asked to specify which course(s) you are interested in teaching.
+- **June 2023:** Interviewed -- this hour-long interview began with a 10min teaching demo followed by ~5min of Q&A. Your demo must be related to the topic area of the course you're intending to teach (i.e. in my case, it needed to be about data viz). I chose to do a live-coding demo, since my vision for EDS 240 would involve a lot of that.
+- **September 2023:** Signed my contract. After negotiations, I ended up at 50% time in my typical full-time role (Data Training Coordinator, more formally classified as Academic Coordinator I), 33% time as Unit 18 Lecturer, and 17% time for curriculum development. It's important to note that these appointments are for the quarter in which the course is taught *only* (e.g. winter quarter, Jan - Mar 2024). The lecturer salary scale is higher than than my current full-time salary, so this split appointment meant I would earn a bit more during winter quarter.
+- **September - November 2023:** While my appointment didn't officially start until January, I spent about 30-40hrs/week prepping for the class (which is a lot of time...this is not an attempt to applaud "the grind," but rather reflect how this experience played out for me). I focused primarily on the syllabus, grading structure, drafting high-level outlines of weekly topics, building the skeleton of the course website, and learning other necessary classroom management tools (I'll elaborate more on all of these in the next sections). I was able to prep ~2 of 4 homework assignments (plus jot down ideas for others), and even a couple early lectures. I also spent ~20hrs/week teaching my typical fall workshops, reviewing / updating materials for [EDS 430: Intro to Shiny](https://ucsb-meds.github.io/EDS-430-Intro-to-Shiny/) (a 2-day short course that I also teach in winter quarter), and other MEDS administrative stuff.
+- **December 2023:** Oof, this was definitely the hardest month out of the whole experience -- while most folks were winding down after a busy fall quarter, I felt like I had to ramp up (more so than I already had been). I was also tired from a stacked fall and wanted so desperately for a break that I felt like I couldn't really take. I was also coming to terms with the fact I would absolutely not have the whole course planned / materials created ahead of the January 8th start date ({{< fa face-grin-beam-sweat title="a grinning face with a drop of sweat dripping from it's brow" >}} yes, that was incredibly naive thinking on my part). I *did* hope to have materials / plans for the first 6 weeks of the quarter largely created -- I would also be teaching my (shorter) Shiny course and helping to facilitate NCEAS' annual [Environmental Data Science Summit](https://www.nceas.ucsb.edu/environmental-data-science-summit) during this first half of the quarter and was genuinely worried about not having enough time to do it all.
+- **January - March 2023:** Here we go! By this point, I had weeks 1-4 fully planned, weeks 5-6 outlined(ish), and weeks 7-10 were largely untouched (aside from having scheduled Allison Horst's guest lecture on using Observable JS to create interactive viz during week 9!). I tried my best to work ahead to continue prepping future lectures / assignments / etc. but this wasn't totally sustainable. By ~mid-quarter, I had about a week to prepare for an upcoming class (though it generally got easier to prep as the quarter went on, since I would accumulate lots of resources and ideas for future lessons while building earlier lectures.)
+
+## Where does one even start when building a syllabus?
+
+This was probably the most intimidating part, given that it's the one place to comprehensively describe all aspects of course proceedings -- from (tentative) topics covered to assignment due dates, and grading schemes to course policies. **I chose to begin with defining the course's learning objectives, i.e. what I wanted all students to feel comfortable with / confident in by the end of the course.** It was really important to me that I blended both technical skills (e.g. using `{ggplot2}`) with information design theory and a solid conceptual understanding of what makes a good data visualization.
+
+I knew I'd be teaching `{ggplot2}` as the data viz package / tool of choice throughout the course (partly because it's the tool I know how to use best, but also because I think `{ggplot2}` is one of the greatest, most well-supported tools out there for creating data viz). However, it was also super important to me that I blended technical skills with information design / data viz theory
+
+
+
+After a lot of iterating, seeking feedback from a mix of past MEDS students (now NCEAS data scientists) and NCEAS educators, I ended up with a list of six learning objectives (check out the [syllabus](https://docs.google.com/document/d/1iv-bsakUA-7FDSZCt0Qq1TUYXBzq0cktzLlxV2AxhZc/edit#heading=h.thw5uolxraye) to see what they are!)
+
+- technical skills (ggplot2) but also theory/conceptual stuff which is largely transferable
+
+mindful of holidays, other due dates capstone
 
 - learning objectives
 - schedule of classes
 - tentative topics by date
 
-How will student success be meaured?
+## How will student success be measured?
 
 - alternative grading
 - tokens
@@ -30,12 +114,52 @@ How do you distribute materials?
 - course website
 - google slides vs. quarto slides
 
-How do you distribute assessments?
+## How do you distribute assessments?
 
 - github classroom
 
-Misc. things to learn / consider:
+## Misc. things to learn / consider:
 
 - canvas
 - spreadsheets for tracking
 - egrades
+
+## Random things that are worthwhile to do: 
+
+- hws take a long time to come up with!
+- keep all the cool resources that you use and those that you don't!
+- later lectures are easier bc I saved so many resources along the way
+
+Things I've learned:
+- 3 hrs is long (for students)
+- too much content (i always overestimate)
+- make more time to run through materials
+
+## Other musings:
+
+- you forget stuff that you made a while ago
+- there's no such thing as part time lecturering, at least for your first year teaching a course. Most other responsibilities had to be put on hold, and I was working ~80hr weeks throughout winter quarter
+- follow up with students when they have questions!
+- teaching is a way more vulnerable act / job than I think I realized
+- you're going to get a lot of feedback -- that's great, and some is super helpful. But it's important to remind yourself that you've thougth *really* hard about each choice you've made and it's okay to not incorporate feedback
+- recognize that burnout is real
+
+## People to thank: 
+
+Educators who openly share their work: 
+- [Meghan Hall](https://meghan.rbind.io/) [CMU 36-315: Statistical Graphics & Visualization](https://cmu-36315.netlify.app/)
+- [Andrew Heiss](https://www.andrewheiss.com/) [PMAP 8101: Data Visualization with R](https://datavizs23.classes.andrewheiss.com/)
+- All things [Cédric Scherer](), but especially his [Graphic Designs with ggplot2](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/) workshop from rstudio::conf(2022) 
+
+Friends / colleagues who think a lot about educational pedagogy and are absolutely changing the field
+- An Bui (self-reflections)
+- Nate Emery (alternative grading)
+
+Instructors who inspire:
+Allison Horst
+
+Friends that encourage you to share out: 
+Julie Lowndes
+
+
+
