--- a/posts/2023-08-01-openscapes-website/index.qmd
+++ b/posts/2023-08-01-openscapes-website/index.qmd
@@ -18,7 +18,7 @@ Y'all, I did something really exciting -- I built another website! This time as 
 
 There are so many amazing things I could say about this process and experience, but I'd be writing a novel. Instead, I'm going to do some high-level reflection and focus a bit on the parts of the process that I enjoyed the most. 
 
-<div class="quote-text-bg">**TL;DR** I rebuilt the [Openscapes website](https://openscapes.org/) using [Quarto](https://quarto.org/) and documented a lot of what I learned and how I did it in the website's [GitHub Wiki](https://github.com/Openscapes/website-new/wiki). This was not only a super helpful practice for me in my own open science learning journey, but also for the Openscapes team as they take over continued maintenance of the site. I reflect on some of the most memorable moments of my first freelancing adventure, including creating responsive web pages, learning regex, and how open communication, collaboration, and cheering each other on can make any daunting task more approachable.</div>
+<div class="dark-green-bg">**TL;DR** I rebuilt the [Openscapes website](https://openscapes.org/) using [Quarto](https://quarto.org/) and documented a lot of what I learned and how I did it in the website's [GitHub Wiki](https://github.com/Openscapes/website-new/wiki). This was not only a super helpful practice for me in my own open science learning journey, but also for the Openscapes team as they take over continued maintenance of the site. I reflect on some of the most memorable moments of my first freelancing adventure, including creating responsive web pages, learning regex, and how open communication, collaboration, and cheering each other on can make any daunting task more approachable.</div>
 
 ## **Task:** Port the Openscapes website from blogdown to Quarto
 
@@ -267,4 +267,4 @@ I've struggled with imposter syndrome throughout my professional career (as so m
 
 The Openscapes team certainly practices what they preach -- you can read all about the [Openscapes Approach](https://openscapes.github.io/approach-guide/approach/) for promoting psychological safety, kinder science, and a growth mindset, as well as explore the many other great [resources](https://openscapes.org/resources.html) developed by Openscapes.
 
-<p class="quote-text-bg large-text center-text">You can check out the Openscapes website at <https://openscapes.org/>. Source code is available on [{{< fa brands github >}} GitHub](https://github.com/Openscapes/website-new).</p>
+<p class="dark-green-bg large-text center-text">You can check out the Openscapes website at <https://openscapes.org/>. Source code is available on [{{< fa brands github >}} GitHub](https://github.com/Openscapes/website-new).</p>
