--- a/posts/2024-03-31-data-viz-course/index.qmd
+++ b/posts/2024-03-31-data-viz-course/index.qmd
@@ -9,20 +9,20 @@ author:
 date: 2024-03-31
 citation: 
   url: https://samanthacsik.github.io/posts/2024-03-31-data-viz-course/
-categories: [MEDS, R, data-visualization]
+categories: [MEDS, R, data-visualization, pedagogy, curriculum-development]
 image: media/horst-eco-r4ds.png
 draft: true
 ---
 
 ::: {.center-text}
-*I had initially intended for this to be a short, high-level reflection of what it was like to build and teach a new (to me) grad-level course. I decided part-way through, however, that this might be the best place to outline some of the more nitty-gritty details (about how academia operates, planning timelines, classroom management, curriculum, etc.), and as a result, it's turned into a short novel. I hope other new educators might find some of these details helpful!* 
+*I had initially intended for this to be a short, high-level reflection of what it was like to build and teach a new (to me) grad-level course. I decided part-way through, however, that this might be the best time to jot down some of the more nitty-gritty details (about how academia operates, planning timelines, classroom management, curriculum, etc.), and as a result, it's turned into a short novel. I hope other new educators might find some of these details helpful!* 
 
 *I'm eternally grateful to the many colleagues, educators, and online strangers who have taken the time to share their own experiences, advice, and materials -- the open data science community is a real gem, and I'm so lucky to be a part of it.*
 :::
 
 <br>
 
-<div class="quote-text-bg">**TL;DR** some text here</div>
+<div class="dark-green-bg">**TL;DR** I recently developed and taught a grad-level course on data visualization & communication! It was incredibly challenging and equally rewarding. I began the planning process by defining the course learning objectives, which ultimately guided what topics to cover and ___. I implemented a version of specifications grading, where students have the opportunity to use feedback to revise / resubmit</div>
 
 <br>
 
@@ -73,39 +73,53 @@ knitr::include_graphics("media/NCEAS-hex.png")
 
 My only real guidelines were to beef up the technical skills / lessons -- the prior version of this course was highly conceptual and didn't involve much programming. Other than that, I was free to do what I wanted. And so, I set off on building my very first grad-level data science course. 
 
-My extremely broad TODO list looked like this:
+## Early logistics: class schedules & enrollment
 
-1. [Figure out my preparation timeline](#timeline)
-2. [Build the course syllabus (incl. learning objectives, topics, schedule, policies)](#syllabus)
-3. [Decide how I will assess student success (i.e. grades)](#grades)
-4. [Determine how to build / organizing course materials](#course-materials)
-5. [Create assignments and figure out how best to distribute them](#assignments)
+Some action items needed to be addressed in advance of even beginning to plan the course, including submitting my desired meeting times and setting the maximum student enrollment -- Bren's Academics team would use this information to work on the absolutely insane puzzle that is class scheduling (they are truly rock stars). 
 
-I'll walk through each of these TODOs in a bit more detail, then end with some things that worked particularly well, things I'd like to do differently, and other musings.
+**I chose to hold lecture once a week for 3 hours** -- my vision for the class was a mix of lecture-based conceptual content and applied coding exercises, and I hoped that this longer block of time would allow me to switch back and forth between the two more easily than in a shorter 1.5 hour-long class that met twice per week. 
+
+**I set my maximum enrollment to 40 students and ultimately ended up with 37** -- this included all 31 MEDS students, 4 [Master of Environmental Science & Management]() (MESM) students, and 2 non-Bren students. Non-MEDS students were required to reach out to me and confirm that they met course prerequisites (they needed to have taken at least one prior course taught in R + have familiarity with git / GitHub) before receiving an enrollment code. 
+
+**Students would also be required to enroll in one of two 50min-long discussion sections** -- these are new to MEDS this 2023-2024 academic year and each instructor has used them in slightly different ways. I had no idea how these would look until I got farther along in the course planning process (more on that later). 
 
 ## My preparation timeline{#timeline}
 
-**I spent about 7 months sincerely preparing for and teaching EDS 240 (not including the application and interview process).** I recognize that's a loonnggg runway and that not every instructor is afforded the time or has the capacity to do the same (particularly lecturers). As an existing employee of the MEDS program whose responsibilities are largely centered around teaching, I was allowed the time and space to think deeply about this course. I'm a super nervous planner when it comes to anything work / teaching-related (hello, imposter syndrome!), so I personally needed this prep time to feel like I had things (sort of) under control. Here's how that timeline roughly shook out:
+**I spent about 7 months sincerely preparing for and teaching EDS 240 (not including the application and interview process).** I recognize that's a loonnggg runway and that not every instructor is afforded the time or has the capacity to do the same. As an existing employee of the MEDS program whose responsibilities are largely centered around teaching, I was allowed the time and space to think deeply about this course. I'm a super nervous planner when it comes to anything work / teaching-related (hello, imposter syndrome!), so I personally needed this prep time to feel like I had things (sort of) under control. Here's how that timeline roughly shook out:
 
-***Note:** I'm also including information about the application process here -- it was totally foreign to me, and while this is specific to UCSB / Bren, I imagine other institutions may follow a similar (somewhat lengthy) process.*
+***Note:** I'm also including information about the application process here -- it was totally foreign to me, and while this is specific to UCSB / Bren, I imagine other institutions may follow a similar process.*
 
-- **April 2023:** Submitted my application for [Teaching Positions, Bren School of Environmental Science & Management](https://recruit.ap.ucsb.edu/JPF02448) -- this is a general call for [Unit 18 Faculty](https://ap.ucsb.edu/policies.and.procedures/red.binder/sections/%5B2_01%5D%20Unit%2018%20Faculty%20and%20Supervisor%20of%20Teacher%20Education%20Series.pdf) (also referred to as Lecturers). Applications require a cover letter, CV, Teaching Statement, and three references. You are asked to specify which course(s) you are interested in teaching.
+- **April 2023:** Submitted my application for [Teaching Positions, Bren School of Environmental Science & Management](https://recruit.ap.ucsb.edu/JPF02448) -- this is a general call for [Unit 18 Faculty](https://ap.ucsb.edu/policies.and.procedures/red.binder/sections/%5B2_01%5D%20Unit%2018%20Faculty%20and%20Supervisor%20of%20Teacher%20Education%20Series.pdf) (often referred to as Lecturers). Applications require a cover letter, CV, Teaching Statement, and three references. You are asked to specify which course(s) you are interested in teaching.
 - **June 2023:** Interviewed -- this hour-long interview began with a 10min teaching demo followed by ~10min of Q&A. Your demo must be related to the topic area of the course you're intending to teach (i.e. in my case, it needed to be about data viz). I chose to do a live coding demo, since my vision for EDS 240 would involve a lot of that (see [Nederbragt et al. (2020)](tps://doi.org/10.1371/journal.pcbi.1008090) for more on this teaching technique).
 - **September 2023:** Signed my contract. After negotiations, I ended up at 50% time in my typical full-time role (Data Training Coordinator, more formally classified as Academic Coordinator I), 33% time as Unit 18 Lecturer, and 17% time for curriculum development. It's important to note that these appointments are for the quarter in which the course is taught *only* (e.g. winter quarter, Jan - Mar 2024). The lecturer salary scale is higher than than my current full-time salary, so this split appointment meant I would earn a bit more during winter quarter.
-- **September - November 2023:** While my appointment didn't officially start until January, I spent about 30-40hrs/week prepping for the class (which is a lot of time...this is not an attempt to applaud "the grind," but rather reflect how this experience played out for me). I focused primarily on the syllabus, grading structure, drafting high-level outlines of weekly topics, building the skeleton of the course website, and learning other necessary classroom management tools (I'll elaborate more on all of these in the next sections). I was able to prep ~2 of 4 homework assignments (plus jot down ideas for others), and even a couple early lectures. I also spent ~30hrs/week teaching my typical fall workshops, reviewing / updating materials for [EDS 430: Intro to Shiny](https://ucsb-meds.github.io/EDS-430-Intro-to-Shiny/) (a 2-day short course that I also teach in winter quarter), and other MEDS administrative stuff.
+- **October - November 2023:** While my appointment didn't officially start until January, I spent about 30-40hrs/week prepping for the class (which is a lot of time...this is not an attempt to applaud "the grind," but rather reflect how this experience played out for me). I focused primarily on the syllabus, grading structure, drafting high-level outlines of weekly topics, building the skeleton of the course website, and learning other necessary classroom management tools (I'll elaborate more on all of these in the next sections). I was able to prep ~2 of 4 homework assignments (plus jot down ideas for others), and even a couple early lectures. I also spent ~30hrs/week teaching my typical fall workshops, reviewing / updating materials for [EDS 430: Intro to Shiny](https://ucsb-meds.github.io/EDS-430-Intro-to-Shiny/) (a 2-day short course that I also teach in winter quarter), and other MEDS administrative stuff.
 - **December 2023:** Oof, this was definitely the hardest month out of the whole experience -- while most folks were winding down after a busy fall quarter, I felt like I had to ramp up (more so than I already had been). I was also tired from a stacked fall and wanted so desperately for a break that I felt like I couldn't really take. I was also coming to terms with the fact I would absolutely not have the whole course planned / materials created ahead of the January 8th start date ({{< fa face-grin-beam-sweat title="a grinning face with a drop of sweat dripping from it's brow" >}} yes, that was incredibly naive thinking on my part). I *did* hope to have materials / plans for the first 6 weeks of the quarter largely created -- I had a number of other non-EDS 240 events, teaching, and responsibilities during this first half of the quarter and I was genuinely worried about not having enough time to do it all.
 
 - **January - March 2023:** Here we go! By this point, I had weeks 1-4 fully planned, weeks 5-6 outlined(ish), and weeks 7-10 were largely untouched (aside from having scheduled [Allison Horst](https://github.com/allisonhorst/)'s guest lecture on using Observable JS to create interactive viz during week 9!). I tried my best to work ahead and continue prepping future lectures / assignments / etc. but this wasn't totally sustainable. By ~week 5, I was prepping each lecture the week before delivering it. That said, I had compiled so many resources and jotted down so many random ideas as I came across things, that creating new lectures did get a bit easier as time went on.
 
-## Building the course syllabus{#syllabus}
+## Building the course
+
+I very quickly realized that building a course involves a whole lot more than just figuring out what topics to teach. My initial TODO list looked something like this:
+
+1. [Build the course syllabus (including learning objectives, topics, schedule, policies)](#syllabus)
+2. [Decide how to assess student success (i.e. grades)](#grades)
+3. [Determine how to build & organizing course materials](#course-materials)
+4. [Create assignments & figure out how best to distribute them](#assignments)
+5. [Plan TA responsibilities](#TA)
+
+I'll walk through each of these in a bit more detail, then wrap up with some things that worked particularly well, things I'd like to do differently, and other musings.
+
+### 1. Build the course syllabus{#syllabus}
+<!-- Building the course syllabus{#syllabus} -->
 
 This was probably the most intimidating part, given that it's the one place to comprehensively describe all aspects of course proceedings -- from (tentative) topics covered to assignment due dates, and grading schemes to course policies. **I chose to begin with defining the course's learning objectives, i.e. what I wanted all students to feel comfortable with / confident in by the end of the course.** It was really important to me that I blended both technical skills (e.g. using `{ggplot2}`) with information design theory and a solid conceptual understanding of what makes a good data visualization (i.e. transferable knowledge, regardless of the programming language / data viz tool of choice).
 
-After a lot of iterating, seeking feedback from a mix of past MEDS students (now NCEAS data scientists) and other NCEAS educators, I ended up with a list of six learning objectives (check out the [syllabus](https://docs.google.com/document/d/1iv-bsakUA-7FDSZCt0Qq1TUYXBzq0cktzLlxV2AxhZc/edit#heading=h.thw5uolxraye) to see what they are!). **Next, I began mapping out tentative topics by date**, being mindful of holidays, large non-EDS 240 deadlines (e.g. [MEDS Capstone](https://bren.ucsb.edu/masters-programs/master-environmental-data-science/meds-capstone-projects) faculty reviews), and the skills we'd need to cover ahead of distributing each new homework assignment. This schedule was a detailed draft at best -- topics were shifted around a bit (e.g. I couldn't always cover as much as I planned in a given class) or dropped entirely as the quarter went on -- but it was an important starting point / road map for me a to return to as I moved through the planning process.
+After a lot of iterating, seeking feedback from a mix of past MEDS students (now NCEAS data scientists) and other NCEAS educators, I ended up with a list of six learning objectives (check out the [syllabus](https://docs.google.com/document/d/1iv-bsakUA-7FDSZCt0Qq1TUYXBzq0cktzLlxV2AxhZc/edit#heading=h.thw5uolxraye) to see what they are!). **Next, I began mapping out tentative topics by date**, being mindful of holidays (no lectures during weeks 2 & 7), large non-EDS 240 deadlines (e.g. [MEDS Capstone](https://bren.ucsb.edu/masters-programs/master-environmental-data-science/meds-capstone-projects) faculty reviews), and the skills we'd need to cover ahead of distributing each new homework assignment. This schedule was a detailed draft at best -- topics were shifted around a bit or dropped entirely leading up to the start of the quarter and even during the quarter (once I had a better understanding of how much I could realistically cover in a given class).
 
-**After these pieces were drafted up, I started filling in the remaining (large) gaps: course policies, grading structure, student resources, etc.** The syllabus was in a constant state of revision right up until the start of the course, but getting that first draft squared away felt like a *huge* accomplishment and it served as my North Star when I finally began creating course materials.
+**After these pieces were drafted up, I started filling in the remaining gaps: course policies, grading structure, student resources, etc.** The syllabus was in a constant state of revision right up until the start of the course, but getting that first draft squared away felt like a *huge* accomplishment and it served as my North Star once I finally began creating course materials.
 
-## Deciding to implement specifications (specs) grading{#grades}
+### 2. Decide how to assess student success{#grades}
+<!-- Implementing specifications (specs) grading{#grades} -->
 
 A conversation [Nate Emery](https://www.citral.ucsb.edu/people/nate-emery), the STEM Education Coordinator at UCSB's [Center for Innovative Teaching, Research, and Learning](https://www.citral.ucsb.edu/home) inspired me to explore alternative grading approaches for this course. He had passed me a copy of [Grading for Growth: A Guide to Alternative Grading Practices That Promote Authentic Learning and Student Engagement in Higher Education](https://www.amazon.com/Grading-Growth-Alternative-Practices-Engagement/dp/1642673811), by David Clark & Robert Talbert (also check out the [Grading for Growth Substack](https://gradingforgrowth.com/)) and some other awesome case studies / resources, which I dove into for the better portion of August 2023. **I decided to implement a version of specifications (specs) grading for EDS 240.** Generally speaking, specs grading refers to: 
 
@@ -135,10 +149,6 @@ Why implement something like specs grading? **“Traditional” grading (assigni
 
 In EDS 240, students earned either a “Satisfactory” or “Not Yet” mark on each assignment based on whether or not they met all rubric specifications (which are provided alongside each assignment). Students could trade in tokens to revise / resubmit assignments based on instructor feedback, for assignment extensions, or to miss class. Students earned tokens (primarily) by attending discussion section each week. **The Grade Tracker below, summarizes the different types of assignments, how students can earn and use tokens, and how to calculate your course grade based on the number of "Satisfactory" grades received:**
 
-<!-- ::: {.center-text} -->
-<!-- **An overview of course assignments and the specs grading implementation that I used in EDS 240 is summarized in the Grade Tracker, below:**  -->
-<!-- ::: -->
-
 ```{r}
 #| eval: true
 #| echo: false
@@ -151,24 +161,43 @@ knitr::include_graphics("media/grade-tracker-green.png")
 *The EDS 240 Grade Tracker was inspired by and adapted from the syllabus for BIO SCI E106 Lec A (Processes in Ecology and Evolution, Winter 2022), by [Dr. Celia Faiola](https://faculty.sites.uci.edu/cfaiola/people/) & [Dr. Celia Symons](https://www.symonslab.com/people)*
 :::
 
-I would be lying if I said that I wasn't **incredibly nervous** to try this out. While all the literature I had explored got me super jazzed about the idea of specs grading, it *is* quite different than what our students are used to...and **change can feel disruptive**. I spent the first full hour of our (3 hour-long) first class laying out this grading structure, the accompanying token system, and expectations (and of course, answering many questions).
+I would be lying if I said that I wasn't **incredibly nervous** to try this out. While all the literature I had explored got me super jazzed about the idea of specs grading, it *is* quite different than what our students are used to...and **change can feel disruptive**. I spent a full hour of our first (3hr-long) lecture laying out this grading structure, the accompanying token system, and expectations (and of course, answering many questions). 
 
-Benefits:
-- know what your grade is at any given point in time
-- if you don't care about the + or the A, you can decide how to spend your energy
-- no haggling over points
-- revise / resubmit (also spreads out grading)
+Some students were understandably uncertain about the specs grading + token system at the start, but **I ultimately received overwhelmingly positive feedback**. I'll share just a few student quotes, pulled from their [mid-course](https://samanthacsik.github.io/EDS-240-data-viz/assignments/SR2-midcourse.html) and [end-of-course](https://samanthacsik.github.io/EDS-240-data-viz/assignments/SR3-endcourse.html) self-reflections:
 
-Quotes from students.
+>[*"I really appreciated the alternative grading style as it took a lot of pressure off of me, as I tend to be a bit of perfectionist. So without the number and letter grades on individual assignments, it allowed me to enjoy the work more and potentially create better visualizations in the process."*]{.small-text}
 
-## How do you distribute materials?{#course-materials}
+>[*"I can’t quite put my finger on it, but the tone of the course just really feels like it promotes easy learning. The expectations are certainly high, but are given in a way that allows room for growth at everyone’s particular pace. Even though I feel like I’m spending the same amount of time on this course as others, it doesn’t feel nearly as stressful. It might have to do with the grading. I really enjoy not having my performance pinned to a letter or number grade that can artificially inflate the stakes."*]{.small-text}
+
+>[*"I was a bit intimidated by the token system but I did open up to it especially with extensions and resubmissions."*]{.small-text}
+
+From my (an instructor's) perspective, this grading system was really wonderful for a number of reasons:
+
+- **I did not have to haggle over any points** -- not even once!! (because points don't exist as they do in traditional grading systems) 
+- **Students respected the clear expectations** set at the start of the course and in the assignment-specific rubrics -- no one expressed frustrations (at least to me) when they needed to use tokens to submit an assignment past the deadline or to revise / resubmit an assignment after receiving a "Not Yet" score
+- *Many* students used tokens for **no-questions-asked extensions** throughout the quarter. I do think this generally **resulted in better overall submissions**, rather than rushed and incomplete work. It also meant that I didn't need to worry about how many points / what percentage to deduct for late submissions.
+- **Students demonstrated marked improvements when they chose to revise / resubmit** assignments that received a "Not Yet" score
+
+::: {.dark-green-bg .center-text}
+[**Importantly, student success within this grading system relies on thorough instructor feedback.**]{.large-text}
+
+While I did spend a lot of time providing detailed constructive feedback on assignments, I certainly saved myself time trying to assign / subtract points across assignments. Ultimately, concentrating my efforts on providing constructive criticisms was *a lot* more fun for me and (I hope) much more helpful for students in their learning journeys.
+:::
+
+### 3. Determine how to build & organizing course materials{#course-materials}
+<!-- How do you distribute materials?{#course-materials} -->
 
 - course website
 - google slides vs. quarto slides
 
-## How do you distribute assessments?{#assignments}
+### 4. Create assignments & figure out how best to distribute them{#assignments}
+<!-- How do you distribute assessments?{#assignments} -->
 
 - github classroom
+
+### 5. Plan TA responsibilities{#TA}
+
+My teaching assistant (TA), [Sevan Esaian](https://www.linkedin.com/in/sevan-esaian-92b7794b/) (who was absolutely incredible to work with), would lead these.
 
 ## Other stuff
 
@@ -187,6 +216,9 @@ Quotes from students.
 - too much content (i always overestimate)
 - make more time to run through materials
 - create qmd templates -- live coding is great, but coding every single thing takes a lot of time; it's a balance of getting that practice while also getting through enough material; having some code pre-written in templates might be the way to go next year
+- So, would I implement specs grading again (in this course and / or others)? ABSOLUTELY! While it does require more work up front (e.g. building clear assignment rubrics, determining exactly what a student needs to do to earn a particular grade)
+- refine specifications
+- self-reflections / goal setting is important and appreciated
 
 #### Other musings:
 
@@ -197,6 +229,7 @@ Quotes from students.
 - teaching is a way more vulnerable act / job than I think I realized
 - you're going to get a lot of feedback -- that's great, and some is super helpful. But it's important to remind yourself that you've thougth *really* hard about each choice you've made and it's okay to not incorporate feedback
 - recognize that burnout is real
+- 
 
 ## People to thank: 
 
